testing API functionality, added classes for the API, listener and caller for API using retrofit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Cuisin</string>
+    <string name="api_key">6c124a6195d94faa880539ca5673de24</string>
+    <string name="query">Top Recipes</string>
 </resources>
