--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,21 @@
 <resources>
     <string name="app_name">Cuisin</string>
     <string name="api_key">6c124a6195d94faa880539ca5673de24</string>
+
+    <!--    voor settingsfragment-->
+    <string name="menu_settings">Settings</string>
+    <string name="number_of_recipes">Amount of recipes?</string>
+    <string name="number_of_recipes_summary">Remembers the amount of recipes you want to display.</string>
+    <string-array name="recipe_number">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+    </string-array>
 </resources>
